--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ notifications:
   email:
     recipients:
       -lextor78@gmail.com
-    on_success: never # default: change
+    on_success: change # default: change
     on_failure: always # default: always
