--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>ru.job4j</groupId>
     <packaging>jar</packaging>
     <artifactId>job4j_design</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
