--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>20210307</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.22</version>
+        </dependency>
+        <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
@@ -122,7 +127,8 @@
                         <configuration>
                             <finalName>duplicatesFinder</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ru.job4j.io.duplicates.DuplicatesFinder</mainClass>
                                 </transformer>
                             </transformers>
