--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: false
 #env:
  # global:
    # - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
+services:
+  - postgresql
+before_install:
+  - psql -c 'create database tracker;' -U postgres
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
