--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ jdk:
 
 sudo: false
 
-#env:
- # global:
+env:
+  global:
+    - PGUSER=postgres
+    - PGPORT=5432
    # - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
 services:
   - postgresql
