--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ env:
     # - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
 services:
   - postgresql
-before_install:
-  - psql -c 'create database tracker;' -U postgres
-  - psql -c 'create database idea_db;' -U postgres
+
+before_script:
+  - psql -c 'create database test_postgres_db;' -U postgres
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
