--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ jdk:
 
 sudo: false
 
-env:
-  global:
-   # - PGUSER=postgres
-    #- PGPORT=5432
-    # - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
+  #env:
+  # global:
+  # -
+  #-
+# - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
 services:
   - postgresql
+
+addons: # ensure that Travis-CI provisions a DB for our test:
+      postgresql: '13'
 
 before_script:
   - psql -c 'create database test_postgres_db;' -U postgres
