--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ sudo: false
   # -
   #-
 # - CODECOV_TOKEN="dca401a0-aa7c-4758-8259-9c2e5dbea0e0"
-addons: # ensure that Travis-CI provisions a DB for our test:
-  postgresql: '13'
+# addons: # ensure that Travis-CI provisions a DB for our test:
+#  postgresql: '13'
 
 services:
   - postgresql
