--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ sudo: false
 # addons: # ensure that Travis-CI provisions a DB for our test:
 #  postgresql: '13'
 
-services:
-  - postgresql
+# services:
+ # - postgresql
 
-before_script:
-  - psql -c 'create database test_postgres_db;' -U postgres
+#before_script:
+#  - psql -c 'create database test_postgres_db;' -U postgres
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
