--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.exxo.jutil</groupId>
+            <artifactId>printer</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
