5. Log4j. FileAppender и другие appenders. [#504876]

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,4 @@
-log4j.rootLogger=DEBUG, console
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
+log4j.rootLogger=TRACE, CONSOLE_LOG, FILE_LOG, FILE_ERROR_LOG
 ## Console appender
 log4j.appender.CONSOLE_LOG=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE_LOG.Threshold=WARN
